og_parser.output
   0  $accept : file $end

   1  file :
   2       | declarations

   3  declarations : declaration
   4               | declarations declaration

   5  declaration : variable ';'
   6              | tupledecls ';'
   7              | function
   8              | procedure

   9  variable : type tIDENTIFIER
  10           | type tIDENTIFIER '=' expr
  11           | tPUBLIC type tIDENTIFIER
  12           | tPUBLIC type tIDENTIFIER '=' expr
  13           | tREQUIRE type tIDENTIFIER

  14  tupledecls : auto ids '=' tuple
  15             | tPUBLIC auto ids '=' tuple

  16  tuple : exprs

  17  ids : tIDENTIFIER
  18      | ids ',' tIDENTIFIER

  19  function : type tIDENTIFIER '(' ')'
  20           | type tIDENTIFIER '(' fargs ')'
  21           | type tIDENTIFIER '(' ')' block
  22           | type tIDENTIFIER '(' fargs ')' block
  23           | auto tIDENTIFIER '(' ')'
  24           | auto tIDENTIFIER '(' fargs ')'
  25           | auto tIDENTIFIER '(' ')' block
  26           | auto tIDENTIFIER '(' fargs ')' block
  27           | tPUBLIC type tIDENTIFIER '(' ')'
  28           | tPUBLIC type tIDENTIFIER '(' fargs ')'
  29           | tPUBLIC type tIDENTIFIER '(' ')' block
  30           | tPUBLIC type tIDENTIFIER '(' fargs ')' block
  31           | tPUBLIC auto tIDENTIFIER '(' ')'
  32           | tPUBLIC auto tIDENTIFIER '(' fargs ')'
  33           | tPUBLIC auto tIDENTIFIER '(' ')' block
  34           | tPUBLIC auto tIDENTIFIER '(' fargs ')' block
  35           | tREQUIRE type tIDENTIFIER '(' ')'
  36           | tREQUIRE type tIDENTIFIER '(' fargs ')'
  37           | tREQUIRE auto tIDENTIFIER '(' ')'
  38           | tREQUIRE auto tIDENTIFIER '(' fargs ')'

  39  procedure : tPROCEDURE tIDENTIFIER '(' ')'
  40            | tPROCEDURE tIDENTIFIER '(' fargs ')'
  41            | tPROCEDURE tIDENTIFIER '(' ')' block
  42            | tPROCEDURE tIDENTIFIER '(' fargs ')' block
  43            | tPUBLIC tPROCEDURE tIDENTIFIER '(' ')'
  44            | tPUBLIC tPROCEDURE tIDENTIFIER '(' fargs ')'
  45            | tPUBLIC tPROCEDURE tIDENTIFIER '(' ')' block
  46            | tPUBLIC tPROCEDURE tIDENTIFIER '(' fargs ')' block
  47            | tREQUIRE tPROCEDURE tIDENTIFIER '(' ')'
  48            | tREQUIRE tPROCEDURE tIDENTIFIER '(' fargs ')'

  49  fargs : type tIDENTIFIER
  50        | fargs ',' type tIDENTIFIER

  51  exprs : expr
  52        | exprs ',' expr

  53  expr : integer
  54       | string
  55       | real
  56       | tINPUT
  57       | tNULLPTR
  58       | tIDENTIFIER '(' ')'
  59       | tIDENTIFIER '(' exprs ')'
  60       | '-' expr
  61       | '+' expr
  62       | '~' expr
  63       | expr '+' expr
  64       | expr '-' expr
  65       | expr '*' expr
  66       | expr '/' expr
  67       | expr '%' expr
  68       | expr '<' expr
  69       | expr '>' expr
  70       | expr tGE expr
  71       | expr tLE expr
  72       | expr tNE expr
  73       | expr tEQ expr
  74       | '(' expr ')'
  75       | lval
  76       | lval '=' expr
  77       | expr tAND expr
  78       | expr tOR expr
  79       | lval '?'
  80       | '[' expr ']'
  81       | tSIZEOF '(' tuple ')'

  82  variables : variable
  83            | variables ',' variable

  84  type : tINT
  85       | tREAL
  86       | tSTR
  87       | tPTR '<' type '>'
  88       | tPTR '<' auto '>'

  89  auto : tAUTO

  90  block : '{' '}'
  91        | '{' blockdecls '}'
  92        | '{' instructions '}'
  93        | '{' blockdecls instructions '}'

  94  blockdecls : blockvar ';'
  95             | blocktup ';'
  96             | blockdecls blockvar ';'
  97             | blockdecls blocktup ';'

  98  blockvar : type tIDENTIFIER
  99           | type tIDENTIFIER '=' expr

 100  blocktup : auto ids '=' tuple

 101  instructions : instruction
 102               | instructions instruction

 103  instruction : expr ';'
 104              | tWRITE exprs ';'
 105              | tWRITELN exprs ';'
 106              | tBREAK
 107              | tCONTINUE
 108              | tRETURN ';'
 109              | tRETURN tuple ';'
 110              | condition
 111              | iteration
 112              | block

 113  condition : tIF expr tTHEN instruction
 114            | tIF expr tTHEN instruction elifelse

 115  elifelse : tELSE instruction
 116           | tELIF expr tTHEN instruction
 117           | tELIF expr tTHEN instruction elifelse

 118  iteration : tFOR ';' ';' tDO instruction
 119            | tFOR variables ';' ';' tDO instruction
 120            | tFOR ';' exprs ';' tDO instruction
 121            | tFOR ';' ';' exprs tDO instruction
 122            | tFOR variables ';' exprs ';' tDO instruction
 123            | tFOR variables ';' ';' exprs tDO instruction
 124            | tFOR variables ';' exprs ';' exprs tDO instruction
 125            | tFOR exprs ';' ';' tDO instruction
 126            | tFOR exprs ';' exprs ';' tDO instruction
 127            | tFOR exprs ';' ';' exprs tDO instruction
 128            | tFOR ';' exprs ';' exprs tDO instruction
 129            | tFOR exprs ';' exprs ';' exprs tDO instruction

 130  lval : tIDENTIFIER
 131       | lval '@' tINTEGER
 132       | '(' expr ')' '@' tINTEGER
 133       | tIDENTIFIER '(' ')' '@' tINTEGER
 134       | tIDENTIFIER '(' exprs ')' '@' tINTEGER
 135       | lval '[' expr ']'
 136       | '(' expr ')' '[' expr ']'
 137       | tIDENTIFIER '(' ')' '[' expr ']'
 138       | tIDENTIFIER '(' exprs ')' '[' expr ']'

 139  integer : tINTEGER

 140  real : tREALVAL

 141  string : tSTRING
 142         | string tSTRING

state 0
	$accept : . file $end  (0)
	file : .  (1)

	tPUBLIC  shift 1
	tREQUIRE  shift 2
	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tAUTO  shift 6
	tPTR  shift 7
	tPROCEDURE  shift 8
	$end  reduce 1

	file  goto 9
	declaration  goto 10
	variable  goto 11
	function  goto 12
	procedure  goto 13
	tupledecls  goto 14
	declarations  goto 15
	type  goto 16
	auto  goto 17


state 1
	variable : tPUBLIC . type tIDENTIFIER  (11)
	variable : tPUBLIC . type tIDENTIFIER '=' expr  (12)
	tupledecls : tPUBLIC . auto ids '=' tuple  (15)
	function : tPUBLIC . type tIDENTIFIER '(' ')'  (27)
	function : tPUBLIC . type tIDENTIFIER '(' fargs ')'  (28)
	function : tPUBLIC . type tIDENTIFIER '(' ')' block  (29)
	function : tPUBLIC . type tIDENTIFIER '(' fargs ')' block  (30)
	function : tPUBLIC . auto tIDENTIFIER '(' ')'  (31)
	function : tPUBLIC . auto tIDENTIFIER '(' fargs ')'  (32)
	function : tPUBLIC . auto tIDENTIFIER '(' ')' block  (33)
	function : tPUBLIC . auto tIDENTIFIER '(' fargs ')' block  (34)
	procedure : tPUBLIC . tPROCEDURE tIDENTIFIER '(' ')'  (43)
	procedure : tPUBLIC . tPROCEDURE tIDENTIFIER '(' fargs ')'  (44)
	procedure : tPUBLIC . tPROCEDURE tIDENTIFIER '(' ')' block  (45)
	procedure : tPUBLIC . tPROCEDURE tIDENTIFIER '(' fargs ')' block  (46)

	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tAUTO  shift 6
	tPTR  shift 7
	tPROCEDURE  shift 18
	.  error

	type  goto 19
	auto  goto 20


state 2
	variable : tREQUIRE . type tIDENTIFIER  (13)
	function : tREQUIRE . type tIDENTIFIER '(' ')'  (35)
	function : tREQUIRE . type tIDENTIFIER '(' fargs ')'  (36)
	function : tREQUIRE . auto tIDENTIFIER '(' ')'  (37)
	function : tREQUIRE . auto tIDENTIFIER '(' fargs ')'  (38)
	procedure : tREQUIRE . tPROCEDURE tIDENTIFIER '(' ')'  (47)
	procedure : tREQUIRE . tPROCEDURE tIDENTIFIER '(' fargs ')'  (48)

	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tAUTO  shift 6
	tPTR  shift 7
	tPROCEDURE  shift 21
	.  error

	type  goto 22
	auto  goto 23


state 3
	type : tINT .  (84)

	.  reduce 84


state 4
	type : tREAL .  (85)

	.  reduce 85


state 5
	type : tSTR .  (86)

	.  reduce 86


state 6
	auto : tAUTO .  (89)

	.  reduce 89


state 7
	type : tPTR . '<' type '>'  (87)
	type : tPTR . '<' auto '>'  (88)

	'<'  shift 24
	.  error


state 8
	procedure : tPROCEDURE . tIDENTIFIER '(' ')'  (39)
	procedure : tPROCEDURE . tIDENTIFIER '(' fargs ')'  (40)
	procedure : tPROCEDURE . tIDENTIFIER '(' ')' block  (41)
	procedure : tPROCEDURE . tIDENTIFIER '(' fargs ')' block  (42)

	tIDENTIFIER  shift 25
	.  error


state 9
	$accept : file . $end  (0)

	$end  accept


state 10
	declarations : declaration .  (3)

	.  reduce 3


state 11
	declaration : variable . ';'  (5)

	';'  shift 26
	.  error


state 12
	declaration : function .  (7)

	.  reduce 7


state 13
	declaration : procedure .  (8)

	.  reduce 8


state 14
	declaration : tupledecls . ';'  (6)

	';'  shift 27
	.  error


state 15
	file : declarations .  (2)
	declarations : declarations . declaration  (4)

	tPUBLIC  shift 1
	tREQUIRE  shift 2
	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tAUTO  shift 6
	tPTR  shift 7
	tPROCEDURE  shift 8
	$end  reduce 2

	declaration  goto 28
	variable  goto 11
	function  goto 12
	procedure  goto 13
	tupledecls  goto 14
	type  goto 16
	auto  goto 17


state 16
	variable : type . tIDENTIFIER  (9)
	variable : type . tIDENTIFIER '=' expr  (10)
	function : type . tIDENTIFIER '(' ')'  (19)
	function : type . tIDENTIFIER '(' fargs ')'  (20)
	function : type . tIDENTIFIER '(' ')' block  (21)
	function : type . tIDENTIFIER '(' fargs ')' block  (22)

	tIDENTIFIER  shift 29
	.  error


state 17
	tupledecls : auto . ids '=' tuple  (14)
	function : auto . tIDENTIFIER '(' ')'  (23)
	function : auto . tIDENTIFIER '(' fargs ')'  (24)
	function : auto . tIDENTIFIER '(' ')' block  (25)
	function : auto . tIDENTIFIER '(' fargs ')' block  (26)

	tIDENTIFIER  shift 30
	.  error

	ids  goto 31


state 18
	procedure : tPUBLIC tPROCEDURE . tIDENTIFIER '(' ')'  (43)
	procedure : tPUBLIC tPROCEDURE . tIDENTIFIER '(' fargs ')'  (44)
	procedure : tPUBLIC tPROCEDURE . tIDENTIFIER '(' ')' block  (45)
	procedure : tPUBLIC tPROCEDURE . tIDENTIFIER '(' fargs ')' block  (46)

	tIDENTIFIER  shift 32
	.  error


state 19
	variable : tPUBLIC type . tIDENTIFIER  (11)
	variable : tPUBLIC type . tIDENTIFIER '=' expr  (12)
	function : tPUBLIC type . tIDENTIFIER '(' ')'  (27)
	function : tPUBLIC type . tIDENTIFIER '(' fargs ')'  (28)
	function : tPUBLIC type . tIDENTIFIER '(' ')' block  (29)
	function : tPUBLIC type . tIDENTIFIER '(' fargs ')' block  (30)

	tIDENTIFIER  shift 33
	.  error


state 20
	tupledecls : tPUBLIC auto . ids '=' tuple  (15)
	function : tPUBLIC auto . tIDENTIFIER '(' ')'  (31)
	function : tPUBLIC auto . tIDENTIFIER '(' fargs ')'  (32)
	function : tPUBLIC auto . tIDENTIFIER '(' ')' block  (33)
	function : tPUBLIC auto . tIDENTIFIER '(' fargs ')' block  (34)

	tIDENTIFIER  shift 34
	.  error

	ids  goto 35


state 21
	procedure : tREQUIRE tPROCEDURE . tIDENTIFIER '(' ')'  (47)
	procedure : tREQUIRE tPROCEDURE . tIDENTIFIER '(' fargs ')'  (48)

	tIDENTIFIER  shift 36
	.  error


state 22
	variable : tREQUIRE type . tIDENTIFIER  (13)
	function : tREQUIRE type . tIDENTIFIER '(' ')'  (35)
	function : tREQUIRE type . tIDENTIFIER '(' fargs ')'  (36)

	tIDENTIFIER  shift 37
	.  error


state 23
	function : tREQUIRE auto . tIDENTIFIER '(' ')'  (37)
	function : tREQUIRE auto . tIDENTIFIER '(' fargs ')'  (38)

	tIDENTIFIER  shift 38
	.  error


state 24
	type : tPTR '<' . type '>'  (87)
	type : tPTR '<' . auto '>'  (88)

	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tAUTO  shift 6
	tPTR  shift 7
	.  error

	type  goto 39
	auto  goto 40


state 25
	procedure : tPROCEDURE tIDENTIFIER . '(' ')'  (39)
	procedure : tPROCEDURE tIDENTIFIER . '(' fargs ')'  (40)
	procedure : tPROCEDURE tIDENTIFIER . '(' ')' block  (41)
	procedure : tPROCEDURE tIDENTIFIER . '(' fargs ')' block  (42)

	'('  shift 41
	.  error


state 26
	declaration : variable ';' .  (5)

	.  reduce 5


state 27
	declaration : tupledecls ';' .  (6)

	.  reduce 6


state 28
	declarations : declarations declaration .  (4)

	.  reduce 4


state 29
	variable : type tIDENTIFIER .  (9)
	variable : type tIDENTIFIER . '=' expr  (10)
	function : type tIDENTIFIER . '(' ')'  (19)
	function : type tIDENTIFIER . '(' fargs ')'  (20)
	function : type tIDENTIFIER . '(' ')' block  (21)
	function : type tIDENTIFIER . '(' fargs ')' block  (22)

	'='  shift 42
	'('  shift 43
	';'  reduce 9


state 30
	ids : tIDENTIFIER .  (17)
	function : auto tIDENTIFIER . '(' ')'  (23)
	function : auto tIDENTIFIER . '(' fargs ')'  (24)
	function : auto tIDENTIFIER . '(' ')' block  (25)
	function : auto tIDENTIFIER . '(' fargs ')' block  (26)

	'('  shift 44
	'='  reduce 17
	','  reduce 17


state 31
	tupledecls : auto ids . '=' tuple  (14)
	ids : ids . ',' tIDENTIFIER  (18)

	'='  shift 45
	','  shift 46
	.  error


state 32
	procedure : tPUBLIC tPROCEDURE tIDENTIFIER . '(' ')'  (43)
	procedure : tPUBLIC tPROCEDURE tIDENTIFIER . '(' fargs ')'  (44)
	procedure : tPUBLIC tPROCEDURE tIDENTIFIER . '(' ')' block  (45)
	procedure : tPUBLIC tPROCEDURE tIDENTIFIER . '(' fargs ')' block  (46)

	'('  shift 47
	.  error


state 33
	variable : tPUBLIC type tIDENTIFIER .  (11)
	variable : tPUBLIC type tIDENTIFIER . '=' expr  (12)
	function : tPUBLIC type tIDENTIFIER . '(' ')'  (27)
	function : tPUBLIC type tIDENTIFIER . '(' fargs ')'  (28)
	function : tPUBLIC type tIDENTIFIER . '(' ')' block  (29)
	function : tPUBLIC type tIDENTIFIER . '(' fargs ')' block  (30)

	'='  shift 48
	'('  shift 49
	';'  reduce 11


state 34
	ids : tIDENTIFIER .  (17)
	function : tPUBLIC auto tIDENTIFIER . '(' ')'  (31)
	function : tPUBLIC auto tIDENTIFIER . '(' fargs ')'  (32)
	function : tPUBLIC auto tIDENTIFIER . '(' ')' block  (33)
	function : tPUBLIC auto tIDENTIFIER . '(' fargs ')' block  (34)

	'('  shift 50
	'='  reduce 17
	','  reduce 17


state 35
	tupledecls : tPUBLIC auto ids . '=' tuple  (15)
	ids : ids . ',' tIDENTIFIER  (18)

	'='  shift 51
	','  shift 46
	.  error


state 36
	procedure : tREQUIRE tPROCEDURE tIDENTIFIER . '(' ')'  (47)
	procedure : tREQUIRE tPROCEDURE tIDENTIFIER . '(' fargs ')'  (48)

	'('  shift 52
	.  error


state 37
	variable : tREQUIRE type tIDENTIFIER .  (13)
	function : tREQUIRE type tIDENTIFIER . '(' ')'  (35)
	function : tREQUIRE type tIDENTIFIER . '(' fargs ')'  (36)

	'('  shift 53
	';'  reduce 13


state 38
	function : tREQUIRE auto tIDENTIFIER . '(' ')'  (37)
	function : tREQUIRE auto tIDENTIFIER . '(' fargs ')'  (38)

	'('  shift 54
	.  error


state 39
	type : tPTR '<' type . '>'  (87)

	'>'  shift 55
	.  error


state 40
	type : tPTR '<' auto . '>'  (88)

	'>'  shift 56
	.  error


state 41
	procedure : tPROCEDURE tIDENTIFIER '(' . ')'  (39)
	procedure : tPROCEDURE tIDENTIFIER '(' . fargs ')'  (40)
	procedure : tPROCEDURE tIDENTIFIER '(' . ')' block  (41)
	procedure : tPROCEDURE tIDENTIFIER '(' . fargs ')' block  (42)

	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tPTR  shift 7
	')'  shift 57
	.  error

	fargs  goto 58
	type  goto 59


state 42
	variable : type tIDENTIFIER '=' . expr  (10)

	tREALVAL  shift 60
	tNULLPTR  shift 61
	tINTEGER  shift 62
	tIDENTIFIER  shift 63
	tSTRING  shift 64
	tSIZEOF  shift 65
	tINPUT  shift 66
	'+'  shift 67
	'-'  shift 68
	'~'  shift 69
	'('  shift 70
	'['  shift 71
	.  error

	string  goto 72
	expr  goto 73
	integer  goto 74
	real  goto 75
	lval  goto 76


state 43
	function : type tIDENTIFIER '(' . ')'  (19)
	function : type tIDENTIFIER '(' . fargs ')'  (20)
	function : type tIDENTIFIER '(' . ')' block  (21)
	function : type tIDENTIFIER '(' . fargs ')' block  (22)

	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tPTR  shift 7
	')'  shift 77
	.  error

	fargs  goto 78
	type  goto 59


state 44
	function : auto tIDENTIFIER '(' . ')'  (23)
	function : auto tIDENTIFIER '(' . fargs ')'  (24)
	function : auto tIDENTIFIER '(' . ')' block  (25)
	function : auto tIDENTIFIER '(' . fargs ')' block  (26)

	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tPTR  shift 7
	')'  shift 79
	.  error

	fargs  goto 80
	type  goto 59


state 45
	tupledecls : auto ids '=' . tuple  (14)

	tREALVAL  shift 60
	tNULLPTR  shift 61
	tINTEGER  shift 62
	tIDENTIFIER  shift 63
	tSTRING  shift 64
	tSIZEOF  shift 65
	tINPUT  shift 66
	'+'  shift 67
	'-'  shift 68
	'~'  shift 69
	'('  shift 70
	'['  shift 71
	.  error

	exprs  goto 81
	string  goto 72
	expr  goto 82
	integer  goto 74
	real  goto 75
	tuple  goto 83
	lval  goto 76


state 46
	ids : ids ',' . tIDENTIFIER  (18)

	tIDENTIFIER  shift 84
	.  error


state 47
	procedure : tPUBLIC tPROCEDURE tIDENTIFIER '(' . ')'  (43)
	procedure : tPUBLIC tPROCEDURE tIDENTIFIER '(' . fargs ')'  (44)
	procedure : tPUBLIC tPROCEDURE tIDENTIFIER '(' . ')' block  (45)
	procedure : tPUBLIC tPROCEDURE tIDENTIFIER '(' . fargs ')' block  (46)

	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tPTR  shift 7
	')'  shift 85
	.  error

	fargs  goto 86
	type  goto 59


state 48
	variable : tPUBLIC type tIDENTIFIER '=' . expr  (12)

	tREALVAL  shift 60
	tNULLPTR  shift 61
	tINTEGER  shift 62
	tIDENTIFIER  shift 63
	tSTRING  shift 64
	tSIZEOF  shift 65
	tINPUT  shift 66
	'+'  shift 67
	'-'  shift 68
	'~'  shift 69
	'('  shift 70
	'['  shift 71
	.  error

	string  goto 72
	expr  goto 87
	integer  goto 74
	real  goto 75
	lval  goto 76


state 49
	function : tPUBLIC type tIDENTIFIER '(' . ')'  (27)
	function : tPUBLIC type tIDENTIFIER '(' . fargs ')'  (28)
	function : tPUBLIC type tIDENTIFIER '(' . ')' block  (29)
	function : tPUBLIC type tIDENTIFIER '(' . fargs ')' block  (30)

	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tPTR  shift 7
	')'  shift 88
	.  error

	fargs  goto 89
	type  goto 59


state 50
	function : tPUBLIC auto tIDENTIFIER '(' . ')'  (31)
	function : tPUBLIC auto tIDENTIFIER '(' . fargs ')'  (32)
	function : tPUBLIC auto tIDENTIFIER '(' . ')' block  (33)
	function : tPUBLIC auto tIDENTIFIER '(' . fargs ')' block  (34)

	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tPTR  shift 7
	')'  shift 90
	.  error

	fargs  goto 91
	type  goto 59


state 51
	tupledecls : tPUBLIC auto ids '=' . tuple  (15)

	tREALVAL  shift 60
	tNULLPTR  shift 61
	tINTEGER  shift 62
	tIDENTIFIER  shift 63
	tSTRING  shift 64
	tSIZEOF  shift 65
	tINPUT  shift 66
	'+'  shift 67
	'-'  shift 68
	'~'  shift 69
	'('  shift 70
	'['  shift 71
	.  error

	exprs  goto 81
	string  goto 72
	expr  goto 82
	integer  goto 74
	real  goto 75
	tuple  goto 92
	lval  goto 76


state 52
	procedure : tREQUIRE tPROCEDURE tIDENTIFIER '(' . ')'  (47)
	procedure : tREQUIRE tPROCEDURE tIDENTIFIER '(' . fargs ')'  (48)

	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tPTR  shift 7
	')'  shift 93
	.  error

	fargs  goto 94
	type  goto 59


state 53
	function : tREQUIRE type tIDENTIFIER '(' . ')'  (35)
	function : tREQUIRE type tIDENTIFIER '(' . fargs ')'  (36)

	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tPTR  shift 7
	')'  shift 95
	.  error

	fargs  goto 96
	type  goto 59


state 54
	function : tREQUIRE auto tIDENTIFIER '(' . ')'  (37)
	function : tREQUIRE auto tIDENTIFIER '(' . fargs ')'  (38)

	tINT  shift 3
	tREAL  shift 4
	tSTR  shift 5
	tPTR  shift 7
	')'  shift 97
	.  error

	fargs  goto 98
	type  goto 59


state 55
	type : tPTR '<' type '>' .  (87)

	.  reduce 87


state 56
	type : tPTR '<' auto '>' .  (88)

	.  reduce 88


state 57
	procedure : tPROCEDURE tIDENTIFIER '(' ')' .  (39)
	procedure : tPROCEDURE tIDENTIFIER '(' ')' . block  (41)

	'{'  shift 99
	$end  reduce 39
	tPUBLIC  reduce 39
	tREQUIRE  reduce 39
	tINT  reduce 39
	tREAL  reduce 39
	tSTR  reduce 39
	tAUTO  reduce 39
	tPTR  reduce 39
	tPROCEDURE  reduce 39

	block  goto 100


state 58
	procedure : tPROCEDURE tIDENTIFIER '(' fargs . ')'  (40)
	procedure : tPROCEDURE tIDENTIFIER '(' fargs . ')' block  (42)
	fargs : fargs . ',' type tIDENTIFIER  (50)

	','  shift 101
	')'  shift 102
	.  error


state 59
	fargs : type . tIDENTIFIER  (49)

	tIDENTIFIER  shift 103
	.  error


state 60
	real : tREALVAL .  (140)

	.  reduce 140


state 61
	expr : tNULLPTR .  (57)

	.  reduce 57


state 62
	integer : tINTEGER .  (139)

	.  reduce 139


state 63
	expr : tIDENTIFIER . '(' ')'  (58)
	expr : tIDENTIFIER . '(' exprs ')'  (59)
	lval : tIDENTIFIER .  (130)
	lval : tIDENTIFIER . '(' ')' '@' tINTEGER  (133)
	lval : tIDENTIFIER . '(' exprs ')' '@' tINTEGER  (134)
	lval : tIDENTIFIER . '(' ')' '[' expr ']'  (137)
	lval : tIDENTIFIER . '(' exprs ')' '[' expr ']'  (138)

	'('  shift 104
	tTHEN  reduce 130
	tDO  reduce 130
	tGE  reduce 130
	tLE  reduce 130
	tEQ  reduce 130
	tNE  reduce 130
	tOR  reduce 130
	tAND  reduce 130
	'='  reduce 130
	'>'  reduce 130
	'<'  reduce 130
	'+'  reduce 130
	'-'  reduce 130
	'*'  reduce 130
	'/'  reduce 130
	'%'  reduce 130
	'?'  reduce 130
	';'  reduce 130
	','  reduce 130
	')'  reduce 130
	'['  reduce 130
	']'  reduce 130
	'@'  reduce 130


state 64
	string : tSTRING .  (141)

	.  reduce 141


state 65
	expr : tSIZEOF . '(' tuple ')'  (81)

	'('  shift 105
	.  error


state 66
	expr : tINPUT .  (56)

	.  reduce 56


state 67
	expr : '+' . expr  (61)

	tREALVAL  shift 60
	tNULLPTR  shift 61
	tINTEGER  shift 62
	tIDENTIFIER  shift 63
	tSTRING  shift 64
	tSIZEOF  shift 65
	tINPUT  shift 66
	'+'  shift 67
	'-'  shift 68
	'~'  shift 69
	'('  shift 70
	'['  shift 71
	.  error

	string  goto 72
	expr  goto 106
	integer  goto 74
	real  goto 75
	lval  goto 76


state 68
	expr : '-' . expr  (60)

	tREALVAL  shift 60
	tNULLPTR  shift 61
	tINTEGER  shift 62
	tIDENTIFIER  shift 63
	tSTRING  shift 64
	tSIZEOF  shift 65
	tINPUT  shift 66
	'+'  shift 67
	'-'  shift 68
	'~'  shift 69
	'('  shift 70
	'['  shift 71
	.  error

	string  goto 72
	expr  goto 107
	integer  goto 74
	real  goto 75
	lval  goto 76


state 69
	expr : '~' . expr  (62)

	tREALVAL  shift 60
	tNULLPTR  shift 61
	tINTEGER  shift 62
	tIDENTIFIER  shift 63
	tSTRING  shift 64
	tSIZEOF  shift 65
	tINPUT  shift 66
	'+'  shift 67
	'-'  shift 68
	'~'  shift 69
	'('  shift 70
	'['  shift 71
	.  error

	string  goto 72
	expr  goto 108
	integer  goto 74
	real  goto 75
	lval  goto 76


state 70
	expr : '(' . expr ')'  (74)
	lval : '(' . expr ')' '@' tINTEGER  (132)
	lval : '(' . expr ')' '[' expr ']'  (136)

	tREALVAL  shift 60
	tNULLPTR  shift 61
	tINTEGER  shift 62
	tIDENTIFIER  shift 63
	tSTRING  shift 64
	tSIZEOF  shift 65
	tINPUT  shift 66
	'+'  shift 67
	'-'  shift 68
	'~'  shift 69
	'('  shift 70
	'['  shift 71
	.  error

	string  goto 72
	expr  goto 109
	integer  goto 74
	real  goto 75
	lval  goto 76


state 71
	expr : '[' . expr ']'  (80)

	tREALVAL  shift 60
	tNULLPTR  shift 61
	tINTEGER  shift 62
	tIDENTIFIER  shift 63
	tSTRING  shift 64
	tSIZEOF  shift 65
	tINPUT  shift 66
	'+'  shift 67
	'-'  shift 68
	'~'  shift 69
	'('  shift 70
	'['  shift 71
	.  error

	string  goto 72
	expr  goto 110
	integer  goto 74
	real  goto 75
	lval  goto 76


state 72
	expr : string .  (54)
	string : string . tSTRING  (142)

	tSTRING  shift 111
	tTHEN  reduce 54
	tDO  reduce 54
	tGE  reduce 54
	tLE  reduce 54
	tEQ  reduce 54
	tNE  reduce 54
	tOR  reduce 54
	tAND  reduce 54
	'>'  reduce 54
	'<'  reduce 54
	'+'  reduce 54
	'-'  reduce 54
	'*'  reduce 54
	'/'  reduce 54
	'%'  reduce 54
	';'  reduce 54
	','  reduce 54
	')'  reduce 54
	']'  reduce 54


state 73
	variable : type tIDENTIFIER '=' expr .  (10)
	expr : expr . '+' expr  (63)
	expr : expr . '-' expr  (64)
	expr : expr . '*' expr  (65)
	expr : expr . '/' expr  (66)
	expr : expr . '%' expr  (67)
	expr : expr . '<' expr  (68)
	expr : expr . '>' expr  (69)
	expr : expr . tGE expr  (70)
	expr : expr . tLE expr  (71)
	expr : expr . tNE expr  (72)
	expr : expr . tEQ expr  (73)
	expr : expr . tAND expr  (77)
	expr : expr . tOR expr  (78)

	tGE  shift 112
	tLE  shift 113
	tEQ  shift 114
	tNE  shift 115
	tOR  shift 116
	tAND  shift 117
	'>'  shift 118
	'<'  shift 119
	'+'  shift 120
	'-'  shift 121
	'*'  shift 122
	'/'  shift 123
	'%'  shift 124
	';'  reduce 10
	','  reduce 10


state 74
	expr : integer .  (53)

	.  reduce 53


state 75
	expr : real .  (55)

	.  reduce 55


state 76
	expr : lval .  (75)
	expr : lval . '=' expr  (76)
	expr : lval . '?'  (79)
	lval : lval . '@' tINTEGER  (131)
	lval : lval . '[' expr ']'  (135)

	'='  shift 125
	'?'  shift 126
	'['  shift 127
	'@'  shift 128
	tTHEN  reduce 75
	tDO  reduce 75
	tGE  reduce 75
	tLE  reduce 75
	tEQ  reduce 75
	tNE  reduce 75
	tOR  reduce 75
	tAND  reduce 75
	'>'  reduce 75
	'<'  reduce 75
	'+'  reduce 75
	'-'  reduce 75
	'*'  reduce 75
	'/'  reduce 75
	'%'  reduce 75
	';'  reduce 75
	','  reduce 75
	')'  reduce 75
	']'  reduce 75


state 77
	function : type tIDENTIFIER '(' ')' .  (19)
	function : type tIDENTIFIER '(' ')' . block  (21)

	'{'  shift 99
	$end  reduce 19
	tPUBLIC  reduce 19
	tREQUIRE  reduce 19
	tINT  reduce 19
	tREAL  reduce 19
	tSTR  reduce 19
	tAUTO  reduce 19
	tPTR  reduce 19
	tPROCEDURE  reduce 19

	block  goto 129


state 78
	function : type tIDENTIFIER '(' fargs . ')'  (20)
	function : type tIDENTIFIER '(' fargs . ')' block  (22)
	fargs : fargs . ',' type tIDENTIFIER  (50)

	','  shift 101
	')'  shift 130
	.  error


state 79
	function : auto tIDENTIFIER '(' ')' .  (23)
	function : auto tIDENTIFIER '(' ')' . block  (25)

	'{'  shift 99
	$end  reduce 23
	tPUBLIC  reduce 23
	tREQUIRE  reduce 23
	tINT  reduce 23
	tREAL  reduce 23
	tSTR  reduce 23
	tAUTO  reduce 23
	tPTR  reduce 23
	tPROCEDURE  reduce 23

	block  goto 131


state 80
	function : auto tIDENTIFIER '(' fargs . ')'  (24)
	function : auto tIDENTIFIER '(' fargs . ')' block  (26)
	fargs : fargs . ',' type tIDENTIFIER  (50)

	','  shift 101
	')'  shift 132
	.  error


state 81
	tuple : exprs .  (16)
	exprs : exprs . ',' expr  (52)

	','  shift 133
	';'  reduce 16
	')'  reduce 16

